Instruction 3 OK Questions aren't display automatically, the user have to press a button (nextButton) When the user select a response, only the response selected is highlighted The UI display a label to inform the user is the response is correct or not Every question have four answers possible. The button are tagged to compare if the tag correspond to the correct answer

--- a/TrueFalseStarter/Base.lproj/Main.storyboard
+++ b/TrueFalseStarter/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Play Again"/>
                                 <connections>
-                                    <action selector="playAgain" destination="BYZ-38-t0r" eventType="touchUpInside" id="klz-B2-JAN"/>
+                                    <action selector="next" destination="BYZ-38-t0r" eventType="touchUpInside" id="FOK-QR-VNh"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Correct" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5p7-DU-Cd1" userLabel="correct/wrong">
